Version 1.0.1 2020-09-19
    * `dgform` produces its own CSS and includes line numbers.
    * Improved callback inheritance.
    * Adjusted instruction set.

Version 1.0.0 2020-09-16
    * Hello World