@@ -1,3 +1,6 @@
+Updated Sublime package and its documentation
+Fixed `dgui.py` bug to correctly pick up the `Makefile` even when launched from external tools.
+
 Version 1.0.1 2020-09-19
     * `dgform` produces its own CSS and includes line numbers.
     * Improved callback inheritance.
